--- a/geolocation-api-exercise/index.html
+++ b/geolocation-api-exercise/index.html
@@ -30,7 +30,7 @@
 
       function handleLocationSuccess(position) {
         var pos = {
-          lat: // Step 2a: add the latitude heresdsd
+          lat: // Step 2a: add the latitude heres
           lng: // Step 2b: add the longitude there
         };
 
