--- a/canvas/index.html
+++ b/canvas/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML5 Canvas</title>
-	<link href="/src/styles.css" rel="stylesheet"></link>
+<!---	<link href="/src/styles.css" type="text/css" rel="stylesheet"></link> --->
 </head>
 <body>
 
 <canvas id="draw" width="800" height="800"></canvas>
-<script src="src/index.js"></script>
+<script src="./src/index.js"></script>
 
 </body>
 </html>
