--- a/geolocation-api-exercise/index.html
+++ b/geolocation-api-exercise/index.html
@@ -56,7 +56,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBr60oAviSBuR1aBjwGHsIVu_w2RYXNuIg&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?callback=initMap"
     ></script>
   </body>
 </html>
